--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,6 +1,7 @@
 body{
 	font-family: 'Poppins', sans-serif;}
-
+*{margin: 0%;
+	padding: 0%;}
 header{
 	width: 100%;
 
@@ -23,6 +24,8 @@ header{
 .menu{
 	width: 65%;
 	float: left;
+    margin-top: 15px;
+
 }
 
 .button{
@@ -142,6 +145,7 @@ section {
 	text-align: center;
 	width: 100%;
     display: inline-block;
+	padding-top: 200px;
 }
 
 .demo .title h3{
@@ -186,16 +190,17 @@ section {
 
 .features-section .container .title{
 	text-align: center;
+	margin-bottom: 50px;
 }
 
 .feature-inner-one{
 	display: flex;
-	margin-top: 15px;
+	margin-top: 10px;
 }
 .feature-inner-one .icon-box{
 	background: #F5F5F5;
 	text-align: center;
-	margin: 12px;
+	margin: 10px 10px 0px;
 	padding: 30px 30px;
 }
 
@@ -234,6 +239,8 @@ section {
 }
 .fotter-inner{
 	width: 100%;
+	margin: 0%;
+	padding: 0%;
 
 }
 .footer .container .title{ 
@@ -244,7 +251,9 @@ section {
     margin: auto;
 	padding: 35px 370px 0px;
 }
-.footer .container .p{ display: flex;}
+.footer .container .p{ 
+	margin-top: 50px;
+	display: flex;}
 .footer .container .p a{
 	background: #ff7060;
     color: #fff;
